# audiodB

./: README.md  platform.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hjict/audiodb/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-vad.cpp
app/src/main/cpp/webrtc/common_audio/signal_processing/: spl_init.c
app/src/main/java/com/hjict/audiodb/: AudioBuffer.java  CircularAudioBuffer.java  FftUtils.java  MainActivity.java  SoundDetectionService.java  SpeechRecorderService.java  SpeechSegmentRecorderWithPreBuffer.java  Utils.java  VadWrapper.java  VoiceRecorderService.java  WavOfflineAnalyzer.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hjict/audiodb/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
